implemented update searchtimer

--- a/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.properties
@@ -1,3 +1,9 @@
+timer_starttime-regexp-message=Format der Uhrzeit ist hh:mm
+timer_starttime-regexp=\\d{2}:\\d{2}
+timer_endtime-regexp-message=Format der Uhrzeit ist hh:mm
+timer_endtime-regexp=\\d{2}:\\d{2}
+
+
 edit_timer=Suchtimer editieren
 timer_save=Speichern
 timer_cancel=Abbrechen
@@ -24,3 +30,16 @@ timer_genre=Genre
 timer_repeat_title=Titel
 timer_repeat_shorttext=Kurztext
 timer_repeat_desc=Beschreibung
+timer_vdr=VDR
+timer_namingmode=Ermittlung des Dateinamens
+timer_directory=Verzeichnis
+timer_priority=Priorität
+timer_lifetime=Lebenszeit
+timer_starttime=Sendungsbeginn zwischen
+timer_date_mo=Mo.
+timer_date_di=Di.
+timer_date_mi=Mi.
+timer_date_do=Do.
+timer_date_fr=Fr.
+timer_date_sa=Sa.
+timer_date_so=So.
