- implemented Nashorn (javascript) integration - implemented proxying remote timers request to another VDR instance. Uses both Nashorn and the new SVDRP server.

--- a/samples/jonglisto.json.sample
+++ b/samples/jonglisto.json.sample
@@ -96,6 +96,11 @@
       "timers" : "stream2",
       "recordings" : [ "stream2", "pivdr2" ]
     }
-  ]  
+  ], 
+  
+  "NashornScripts": {  
+       "svdrp": "/etc/jonglisto/svdrp.js"
+  } 
+  	   
 }
 		
