- fixed a bug in jonglisto OSD - implemented a new OSD Menu item for epg2vdr database (highly configurable)

--- a/samples/jonglisto.json.sample
+++ b/samples/jonglisto.json.sample
@@ -99,7 +99,8 @@
   ], 
   
   "NashornScripts": {  
-       "svdrp": "/etc/jonglisto/svdrp.js"
+       "svdrp": "/etc/jonglisto/svdrp.js",
+       "epg2vdr": "/etc/jonglisto/epg2vdr.js"
   } 
   	   
 }
