--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ targetCompatibility = "1.8"
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 group = "vdr.jonglisto"
-version = "0.0.3-snapshot"
+version = "0.0.3"
 
 buildscript {
   repositories {
@@ -24,6 +24,8 @@ repositories {
 
     mavenCentral()
 
+	jcenter()
+	
     maven {
         name "JBoss"
         url "http://repository.jboss.org/nexus/content/groups/public/"
@@ -78,6 +80,12 @@ dependencies {
     // compile  'org.tynamo:tapestry-security:0.6+'
     
     compile    'org.tynamo:tapestry-conversations:0.2.0'
+
+	compile  'de.eddyson:tapestry-webjars:1.0.0'
+	compile  'de.eddyson:tapestry-extensions:0.0.22'
+	compile  'org.webjars:jquery:3.1.1'
+	compile  'org.webjars:jquery-ui:1.12.1'
+	compile  'org.webjars.bower:multiselect-two-sides:2.2.9'
 
 	compile  'org.apache.httpcomponents:httpclient:4.5.2'
 	compile  'org.apache.commons:commons-lang3:3.4'
