drag and drop in channel config works now, functionality is still missing

--- a/src/main/resources/vdr/jonglisto/web/components/ChannelConfig.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/ChannelConfig.properties
@@ -1,3 +1,5 @@
+save_channels_conf=Aktuelle Konfiguration speichern
+load_channels_conf=Gespeicherte Konfiguration laden
 create_channels_conf=Generiere channels.conf
 create_channel_group=Neue Kanalgruppe
 deleteObsolete=Lösche 'obsolete' Kanäle
