implemented some methods

--- a/src/main/resources/vdr/jonglisto/web/components/ChannelConfig.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/ChannelConfig.properties
@@ -12,3 +12,9 @@ FREE=Nur freie Sender
 ENCRYPTED=Nur verschlüsselte Sender
 filterradio=TV und/oder Radio
 filterencrypted=Freie oder verschlüsselte Sender
+parking_group=Parkplatz/Mülleimer
+rename_group_title=Kanalgruppe umbenennen
+new_group_title=Kanalgruppe erstellen
+new_group_name=Name der neuen Kanalgruppe
+old_group_name=Aktueller Name der Kanalgruppe
+cancel=Abbrechen
