possibility to update ordering of epg2vdr channelmap according to channel sorting in epg2vdr database

--- a/src/main/resources/vdr/jonglisto/web/components/ChannelMap.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/ChannelMap.properties
@@ -17,3 +17,4 @@ hide_epgdataids=EPGDATA Ids verstecken
 download_mapping=Download Mapping
 delete_name_mapping=Lösche Name Mapping
 save_provider_config=Konfiguration speichern
+update_database=Sortierung in der Datenbank ändern
