--- a/src/main/resources/vdr/jonglisto/web/components/ChannelConfig.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/ChannelConfig.properties
@@ -16,3 +16,8 @@ new_group_title=Kanalgruppe erstellen
 new_group_name=Name der neuen Kanalgruppe
 old_group_name=Aktueller Name der Kanalgruppe
 cancel=Abbrechen
+channel_config_sort=Kanal-Konfiguration/-Sortierung
+channel_groups=Kanalgruppen
+rename=Umbenennen
+delete=Löschen
+sort=Sortieren
