--- a/src/main/resources/vdr/jonglisto/web/components/ChannelMap.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/ChannelMap.properties
@@ -18,3 +18,7 @@ download_mapping=Download Mapping
 delete_name_mapping=Lösche Name Mapping
 save_provider_config=Konfiguration speichern
 update_database=Sortierung in der Datenbank ändern
+provider_config=Konfiguration der EPG Provider
+channel_selection=Kanalauswahl
+channel_mapping=Kanalmapping
+channels=Kanäle
