--- a/src/main/resources/vdr/jonglisto/web/components/ProgramTimeEpg.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/ProgramTimeEpg.properties
@@ -1,10 +1,10 @@
 channelid-label=Kanal
-date-label=Datum
-time_from_to-label=Zeit
+time-label=Uhrzeit
 title-label=Titel
 season-label=Staffel
 part-label=Folge
 genre-label=Genre
 category-label=Kategorie
 action-label=Aktionen
-search_count=Anzahl der Suchergebnisse
+create_timer=Timer anlegen
+switch_channel=TV umschalten
