--- a/src/main/resources/vdr/jonglisto/web/components/Recordings.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/Recordings.properties
@@ -3,3 +3,12 @@ recStartTime-label=Start
 duration-label=Dauer
 name-label=Name
 fileSize-label=Größe(MB)
+rename_recording=Aufnahme umbenennen
+move_recording=Aufnahme verschieben
+delete_recording=Aufnahme löschen
+save=Speichern
+cancel=Abbrechen
+move=Verschieben
+selected_recordings=Ausgewählte Aufnahmen
+delete=löschen
+move_to=verschieben nach
