--- a/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.properties
@@ -3,6 +3,17 @@ timer_starttime-regexp=\\d{2}:\\d{2}
 timer_endtime-regexp-message=Format der Uhrzeit ist hh:mm
 timer_endtime-regexp=\\d{2}:\\d{2}
 
+active-label=aktiv
+name-label=Name
+type-label=Typ
+hits-label=Treffer
+channels-label=Kanäle
+chformat-label=Format
+expression-label=Suchausdruck 1
+expression1-label=Suchausdruck 2
+vdrName-label=Aufnahme VDR
+directory-label=Verzeichnis
+action-label=Aktionen
 
 edit_timer=Suchtimer editieren
 timer_save=Speichern
@@ -44,3 +55,35 @@ timer_date_fr=Fr.
 timer_date_sa=Sa.
 timer_date_so=So.
 timer_back=Zurück
+execute_searchtimer=Suchtimer ausführen
+edit_searchtimer=Suchtimer bearbeiten
+delete_searchtimer=Suchtimer löschen
+create_searchtimer=Neuen Suchtimer erstellen
+common_configuration=Allgemeine Konfiguration
+select_record=aufnehmen
+select_switch_channel=umschalten
+select_search=suchen
+select_unknown=<Unbekannt>
+select_vdr=VDR
+select_auto=Auto
+select_constable=Constable
+select_series=Serie
+select_category=Kategorisiert
+select_userdefined=Benutzerdefiniert
+select_exactly=Exakt
+select_regex=regulärer Ausdruck
+select_pattern=Muster
+select_contains=enthalten in
+search_criteria=Suchkriterien
+avoid_repeat=Wiederholungen vermeiden
+extended_search_criteria=Erweiterte Suchkriterien
+and=und
+days=Tage
+select_channel=Kanalauswahl
+select_category=Auswahl Kategorie
+select_genre=Auswahl Genre
+search_results=Suchergebnisse
+
+
+
+
