--- a/src/main/resources/vdr/jonglisto/web/components/TimerView.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/TimerView.properties
@@ -23,3 +23,10 @@ timer_active=Aktiv
 timer_vps=VPS
 timer_save=Speichern
 timer_cancel=Abbrechen
+edit_timer=Timer bearbeiten
+delete_timer=Timer löschen
+selected_timer=Ausgewählte Timer
+delete=löschen
+activate=aktivieren
+deactivate=deaktivieren
+move_to=verschieben nach
