--- a/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.properties
+++ b/src/main/resources/vdr/jonglisto/web/components/SearchTimerView.properties
@@ -60,20 +60,13 @@ edit_searchtimer=Suchtimer bearbeiten
 delete_searchtimer=Suchtimer löschen
 create_searchtimer=Neuen Suchtimer erstellen
 common_configuration=Allgemeine Konfiguration
-select_record=aufnehmen
-select_switch_channel=umschalten
-select_search=suchen
-select_unknown=<Unbekannt>
-select_vdr=VDR
-select_auto=Auto
-select_constable=Constable
-select_series=Serie
-select_category=Kategorisiert
-select_userdefined=Benutzerdefiniert
-select_exactly=Exakt
-select_regex=regulärer Ausdruck
-select_pattern=Muster
-select_contains=enthalten in
+timer_type_select=R=aufnehmen,V=umschalten,S=suchen
+timer_type_record=aufnehmen
+timer_type_switch=umschalten
+timer_type_search=suchen
+timer_type_unknown=<Unbekannt>
+timer_namingmode_select=0=VDR,1=Auto,2=Constable,3=Serie,4=Kategorisiert,5=Benutzerdefiniert
+timer_searchmode_select=1=Exakt,2=regulärer Ausdruck,3=Muster,4=enthalten in
 search_criteria=Suchkriterien
 avoid_repeat=Wiederholungen vermeiden
 extended_search_criteria=Erweiterte Suchkriterien
