--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -1,4 +1,231 @@
-# This is where global application properties go.
-# You can also have individual message catalogs for each page and each
-# component that override these defaults.
-# The name of this file is based on the <filter-name> element in web.
+timer_endtime-regexp=\\d{2}:\\d{2}
+timer_starttime-regexp=\\d{2}:\\d{2}
+timer_type_unknown=<unknown>
+timer_namingmode_select=0=VDR,1=auto,2=Constable,3=series,4=categorised,5=user defined
+timer_searchmode_select=1=exact match,2=regular expr.,3=like,4=contained in
+cancel=cancel
+action-label=actions
+active=active
+active-label=active
+isActive-label=active
+timer_active=active
+activate=activate
+save_channels_conf=save current configuration
+old_group_name=old name of channel group
+ALL=all
+blank_label=all...
+common_configuration=common configuration
+select_alpha=alphabetical
+other=other
+search_count=hits
+audio=audio
+delete_recording=delete recording
+rename_recording=rename recording
+vdrName-label=VDR for recording
+move_recording=move recording
+page_recordings=recordings
+timer_type_record=record
+output=output
+selected_recordings=selected recordings
+update_selected_channels=save selected channels
+selected_timer=selected timers
+select_genre=select genre
+channel_select=select channels
+select_category=select category
+svdrp_vdr=select VDR
+auto_mapping=auto mapping
+banner=banner
+timer_repeat_desc=description
+timer_search_longtext=description
+timer_search_longtext2=description
+tipp=rating
+timer_time_to=to
+page_channelmap=channelmap
+select_channelmap=channelmap
+actor=actor
+filename-label=file
+date-label=date
+recStartDate-label=date
+startDate-label=date
+timer_date=date
+duration=duration
+duration-label=duration
+deactivate=deactivate
+timer_tuesday=Tu
+timer_date_di=Tu.
+timer_thursday=Th
+timer_date_do=Th.
+download_mapping=download mapping
+developer_pages=developer pages
+show_epgdataids=show EPGDATA ids
+hide_epgdataids=hide EPGDATA ids
+epgdata_pin=EPGDATA pin
+timer_episode=episode
+episode_pics=episode pictures
+timer_namingmode=filename calculation
+extended_search_criteria=extended search criteria
+fan_art=fan art
+flags=flags
+episode=part
+part=part
+part-label=part
+timer_seasonpart=part
+chformat-label=format
+timer_endtime-regexp-message=format of time is hh:mm
+timer_starttime-regexp-message=format of time is hh:mm
+timer_friday=Fr
+timer_date_fr=Fr.
+filterencrypted=fta or encrypted channels
+parental_rating=parental rating
+guests=guests
+create_channels_conf=generate channels.conf
+genre=genre
+genre-label=genre
+timer_genre=genre
+load_channels_conf=load saved configuration
+timer_case=case sensitivity
+fileSize-label=size (MB)
+mainprov=main provider
+imdb_rating=IMDb rating
+imdb_rating_episode=IMDb rating part
+imdb_rating_series=IMDb rating series
+inactive=inactive
+yes=yes
+timer_year=year
+camera=camera
+channel_name=channel
+channelid-label=channel
+channelName-label=channel
+timer_channel=channel
+channel_config_sort=channel configuration/sorting
+channel_selection=channel selection
+select_channel=channel selection
+channels=channels
+channels-label=channels
+epgid_select=channels of the epg provider
+channel_group=channel group
+new_group_title=create channel group
+rename_group_title=rename channel group
+channel_groups=channel groups
+page_channelconfig=channel configuration
+channel_mapping=channel mapping
+category=category
+category-label=category
+timer_category=category
+provider_config=configuration of epg provider
+save_provider_config=save configuration
+configured_views=configured views
+configured_vdr=configured VDR
+shortreview=short review
+timer_repeat_shorttext=short text
+timer_search_shorttext=short text
+timer_search_shorttext2=short text
+timer_lifetime=lifetime
+logout=logout
+delete_name_mapping=delete name mapping
+delete=delete
+save_mapping=save mapping
+reset_mapping=restore mapping
+timer_wednesday=We
+timer_date_mi=We.
+timer_monday=Mo
+timer_date_mo=Mo.
+moderator=moderator
+name-label=name
+timer_name=name
+new_group_name=name of the new channel group
+no=no
+network=network
+create_channel_group=new channel group
+create_searchtimer=create new search timer
+FREE=only fta channels
+RADIO=only radio channels
+TV=only tv channels
+ENCRYPTED=only encrypted channels
+parking_group=parking place/dustbin
+poster=poster
+timer_priority=priority
+page_program_now=program (now)
+page_program_channel=program (channel)
+page_program_day=program (day)
+read_provider_ids=refresh provider ids
+source=source
+timer_type_select=R=record,V=view,S=search
+RADIOTV=radio and tv
+rating=rating
+director=director
+timer_saturday=Sa
+timer_date_sa=Sa.
+secprov=secundary provider
+timer_starttime=start of show between
+series_poster=series poster
+series_overview=series overview
+timer_sunday=Su
+timer_date_so=Su.
+sort=sort
+update_database=change sort in database
+save=save
+timer_save=save
+season=season
+season-label=season
+timer_season=season
+recStartTime-label=start
+startTime-label=start
+page_index=home page
+status=status
+keyword=keyword
+stopTime-label=stop
+timer_searchitem=search term
+expression-label=search term 1
+expression1-label=search term 2
+timer_searchitem2=search term 2
+search=search
+timer_type_search=search
+search_results=search results
+search_criteria=search criteria
+timer_searchmode=search mode
+page_search_timer=search timer
+execute_searchtimer=execute search timer
+edit_searchtimer=edit search timer
+edit_timer=edit search timer
+delete_searchtimer=delete search timer
+page_svdrp_console=SVDRP console
+days=days
+page_timer=timer
+create_timer=create timer
+edit_timer=edit timer
+delete_timer=delete timer
+timer_repeat_title=title
+timer_search_title=title
+timer_search_title2=title
+title=title
+title-label=title
+hits-label=hits
+switch_channel=switch channel
+filterradio=tv and/or radio
+show_tvmids=show TVM ids
+hide_tvmids=hide TVM ids
+show_tvspids=show TVSP ids
+hide_tvspids=hide TVSP ids
+type-label=type
+time=time
+time-label=time
+timer_start=time
+rename=rename
+timer_type_switch=switch channel
+and=and
+select_vdr=VDR
+timer_vdr=VDR
+move=move
+move_to=move to
+directory-label=directory
+timer_directory=directory
+timer_time_from=from
+timer_vps=VPS
+timer_type=do what...
+avoid_repeat=avoid repeats
+greeting=Welcome to VDR Jonglisto.
+timer_weekdays=weekdays
+time_from_to-label=time
+timer_back=back
+svdrp_input=
