language selection implemented

--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -156,7 +156,7 @@ rating=rating
 director=director
 timer_saturday=Sa
 timer_date_sa=Sa.
-secprov=secundary provider
+secprov=secondary provider
 timer_starttime=start of show between
 series_poster=series poster
 series_overview=series overview
@@ -229,3 +229,4 @@ timer_weekdays=weekdays
 time_from_to-label=time
 timer_back=back
 svdrp_input=
+select_language=de=deutsch,en=english
