start setup page

--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -230,3 +230,26 @@ time_from_to-label=time
 timer_back=back
 svdrp_input=
 select_language=de=deutsch,en=english
+configuration=Jonglisto Configuration
+page_setup=Setup
+
+database_configuration=Database configuration
+epgdhost=Host
+epgdport=Port
+epgduser=User
+epgdpw=Password
+testDatabase=test database configuration
+vdr_alias=VDR alias
+vdr_ip=IP/Hostname
+vdr_uuid=UUID
+vdr_svdrpport=SVDRP port
+vdr_restfulapi=Restfulapi port
+newvdr=New VDR
+configviews=Configuration of views
+view_name=Name
+view_tv=tv VDR
+view_channels=channel list VDR
+view_timers=timer VDR
+view_recordings=recordings VDR
+newview=new view
+configvdr=VDR configuration
