start a setup page... not yet finished

--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -238,6 +238,7 @@ epgdhost=Host
 epgdport=Port
 epgduser=User
 epgdpw=Password
+epgddatabase=Database
 testDatabase=test database configuration
 vdr_alias=VDR alias
 vdr_ip=IP/Hostname
@@ -253,3 +254,4 @@ view_timers=timer VDR
 view_recordings=recordings VDR
 newview=new view
 configvdr=VDR configuration
+generateConfig=Generate Jonglisto configuration 
