finished setup page

--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -1,257 +1,259 @@
-timer_endtime-regexp=\\d{2}:\\d{2}
-timer_starttime-regexp=\\d{2}:\\d{2}
-timer_type_unknown=<unknown>
-timer_namingmode_select=0=VDR,1=auto,2=Constable,3=series,4=categorised,5=user defined
-timer_searchmode_select=1=exact match,2=regular expr.,3=like,4=contained in
-cancel=cancel
 action-label=actions
+activate=activate
 active=active
 active-label=active
-isActive-label=active
-timer_active=active
-activate=activate
-save_channels_conf=save current configuration
-old_group_name=old name of channel group
-ALL=all
-blank_label=all...
-common_configuration=common configuration
-select_alpha=alphabetical
-other=other
-search_count=hits
-audio=audio
-delete_recording=delete recording
-rename_recording=rename recording
-vdrName-label=VDR for recording
-move_recording=move recording
-page_recordings=recordings
-timer_type_record=record
-output=output
-selected_recordings=selected recordings
-update_selected_channels=save selected channels
-selected_timer=selected timers
-select_genre=select genre
-channel_select=select channels
-select_category=select category
-svdrp_vdr=select VDR
-auto_mapping=auto mapping
-banner=banner
-timer_repeat_desc=description
-timer_search_longtext=description
-timer_search_longtext2=description
-tipp=rating
-timer_time_to=to
-page_channelmap=channelmap
-select_channelmap=channelmap
 actor=actor
-filename-label=file
-date-label=date
-recStartDate-label=date
-startDate-label=date
-timer_date=date
-duration=duration
-duration-label=duration
-deactivate=deactivate
-timer_tuesday=Tu
-timer_date_di=Tu.
-timer_thursday=Th
-timer_date_do=Th.
-download_mapping=download mapping
-developer_pages=developer pages
-show_epgdataids=show EPGDATA ids
-hide_epgdataids=hide EPGDATA ids
-epgdata_pin=EPGDATA pin
-timer_episode=episode
-episode_pics=episode pictures
-timer_namingmode=filename calculation
-extended_search_criteria=extended search criteria
-fan_art=fan art
-flags=flags
-episode=part
-part=part
-part-label=part
-timer_seasonpart=part
-chformat-label=format
-timer_endtime-regexp-message=format of time is hh:mm
-timer_starttime-regexp-message=format of time is hh:mm
-timer_friday=Fr
-timer_date_fr=Fr.
-filterencrypted=fta or encrypted channels
-parental_rating=parental rating
-guests=guests
-create_channels_conf=generate channels.conf
-genre=genre
-genre-label=genre
-timer_genre=genre
-load_channels_conf=load saved configuration
-timer_case=case sensitivity
-fileSize-label=size (MB)
-mainprov=main provider
-imdb_rating=IMDb rating
-imdb_rating_episode=IMDb rating part
-imdb_rating_series=IMDb rating series
-inactive=inactive
-yes=yes
-timer_year=year
+ALL=all
+and=and
+audio=audio
+auto_mapping=auto mapping
+avoid_repeat=avoid repeats
+banner=banner
+blank_label=all...
 camera=camera
-channel_name=channel
-channelid-label=channel
-channelName-label=channel
-timer_channel=channel
-channel_config_sort=channel configuration/sorting
-channel_selection=channel selection
-select_channel=channel selection
-channels=channels
-channels-label=channels
-epgid_select=channels of the epg provider
-channel_group=channel group
-new_group_title=create channel group
-rename_group_title=rename channel group
-channel_groups=channel groups
-page_channelconfig=channel configuration
-channel_mapping=channel mapping
+cancel=cancel
 category=category
 category-label=category
-timer_category=category
-provider_config=configuration of epg provider
-save_provider_config=save configuration
-configured_views=configured views
+channel_config_sort=channel configuration/sorting
+channel_group=channel group
+channel_groups=channel groups
+channelid-label=channel
+channel_mapping=channel mapping
+channel_name=channel
+channelName-label=channel
+channels=channels
+channel_selection=channel selection
+channel_select=select channels
+channels-label=channels
+checkVdr=Check alias/VDR configuration
+chformat-label=format
+common_configuration=common configuration
+configuration=Jonglisto Configuration
 configured_vdr=configured VDR
-shortreview=short review
-timer_repeat_shorttext=short text
-timer_search_shorttext=short text
-timer_search_shorttext2=short text
-timer_lifetime=lifetime
-logout=logout
-delete_name_mapping=delete name mapping
-delete=delete
-save_mapping=save mapping
-reset_mapping=restore mapping
-timer_wednesday=We
-timer_date_mi=We.
-timer_monday=Mo
-timer_date_mo=Mo.
-moderator=moderator
-name-label=name
-timer_name=name
-new_group_name=name of the new channel group
-no=no
-network=network
+configured_views=configured views
+configvdr=VDR configuration
+configviews=Configuration of views
 create_channel_group=new channel group
+create_channels_conf=generate channels.conf
 create_searchtimer=create new search timer
-FREE=only fta channels
-RADIO=only radio channels
-TV=only tv channels
-ENCRYPTED=only encrypted channels
-parking_group=parking place/dustbin
-poster=poster
-timer_priority=priority
-page_program_now=program (now)
-page_program_channel=program (channel)
-page_program_day=program (day)
-read_provider_ids=refresh provider ids
-source=source
-timer_type_select=R=record,V=view,S=search
-RADIOTV=radio and tv
-rating=rating
+create_timer=create timer
+database_configuration=Database configuration
+date-label=date
+days=days
+deactivate=deactivate
+delete=delete
+delete_name_mapping=delete name mapping
+delete_recording=delete recording
+delete_searchtimer=delete search timer
+delete_timer=delete timer
+developer_pages=developer pages
 director=director
-timer_saturday=Sa
-timer_date_sa=Sa.
-secprov=secondary provider
-timer_starttime=start of show between
-series_poster=series poster
-series_overview=series overview
-timer_sunday=Su
-timer_date_so=Su.
-sort=sort
-update_database=change sort in database
-save=save
-timer_save=save
-season=season
-season-label=season
-timer_season=season
-recStartTime-label=start
-startTime-label=start
-page_index=home page
-status=status
-keyword=keyword
-stopTime-label=stop
-timer_searchitem=search term
-expression-label=search term 1
-expression1-label=search term 2
-timer_searchitem2=search term 2
-search=search
-timer_type_search=search
-search_results=search results
-search_criteria=search criteria
-timer_searchmode=search mode
-page_search_timer=search timer
-execute_searchtimer=execute search timer
+directory-label=directory
+download_mapping=download mapping
+duration=duration
+duration-label=duration
 edit_searchtimer=edit search timer
 edit_timer=edit search timer
-delete_searchtimer=delete search timer
-page_svdrp_console=SVDRP console
-days=days
-page_timer=timer
-create_timer=create timer
 edit_timer=edit timer
-delete_timer=delete timer
-timer_repeat_title=title
-timer_search_title=title
-timer_search_title2=title
-title=title
-title-label=title
-hits-label=hits
-switch_channel=switch channel
-filterradio=tv and/or radio
-show_tvmids=show TVM ids
-hide_tvmids=hide TVM ids
-show_tvspids=show TVSP ids
-hide_tvspids=hide TVSP ids
-type-label=type
-time=time
-time-label=time
-timer_start=time
-rename=rename
-timer_type_switch=switch channel
-and=and
-select_vdr=VDR
-timer_vdr=VDR
-move=move
-move_to=move to
-directory-label=directory
-timer_directory=directory
-timer_time_from=from
-timer_vps=VPS
-timer_type=do what...
-avoid_repeat=avoid repeats
-greeting=Welcome to VDR Jonglisto.
-timer_weekdays=weekdays
-time_from_to-label=time
-timer_back=back
-svdrp_input=
-select_language=de=deutsch,en=english
-configuration=Jonglisto Configuration
-page_setup=Setup
-
-database_configuration=Database configuration
+ENCRYPTED=only encrypted channels
+epgdata_pin=EPGDATA pin
+epgddatabase=Database
 epgdhost=Host
 epgdport=Port
-epgduser=User
 epgdpw=Password
-epgddatabase=Database
-testDatabase=test database configuration
-vdr_alias=VDR alias
-vdr_ip=IP/Hostname
-vdr_uuid=UUID
-vdr_svdrpport=SVDRP port
-vdr_restfulapi=Restfulapi port
-newvdr=New VDR
-configviews=Configuration of views
-view_name=Name
-view_tv=tv VDR
-view_channels=channel list VDR
-view_timers=timer VDR
-view_recordings=recordings VDR
-newview=new view
-configvdr=VDR configuration
+epgduser=User
+epgid_select=channels of the epg provider
+episode=part
+episode_pics=episode pictures
+execute_searchtimer=execute search timer
+expression1-label=search term 2
+expression-label=search term 1
+extended_search_criteria=extended search criteria
+fan_art=fan art
+filename-label=file
+fileSize-label=size (MB)
+filterencrypted=fta or encrypted channels
+filterradio=tv and/or radio
+flags=flags
+FREE=only fta channels
 generateConfig=Generate Jonglisto configuration 
+genre=genre
+genre-label=genre
+greeting=Welcome to VDR Jonglisto.
+guests=guests
+hide_epgdataids=hide EPGDATA ids
+hide_tvmids=hide TVM ids
+hide_tvspids=hide TVSP ids
+hits-label=hits
+imdb_rating_episode=IMDb rating part
+imdb_rating=IMDb rating
+imdb_rating_series=IMDb rating series
+inactive=inactive
+isActive-label=active
+keyword=keyword
+load_channels_conf=load saved configuration
+logout=logout
+mainprov=main provider
+moderator=moderator
+move=move
+move_recording=move recording
+move_to=move to
+name-label=name
+network=network
+new_group_name=name of the new channel group
+new_group_title=create channel group
+newvdr=New VDR
+newview=new view
+no=no
+old_group_name=old name of channel group
+other=other
+output=output
+page_channelconfig=channel configuration
+page_channelmap=channelmap
+page_index=home page
+page_program_channel=program (channel)
+page_program_day=program (day)
+page_program_now=program (now)
+page_recordings=recordings
+page_search_timer=search timer
+page_setup=Setup
+page_svdrp_console=SVDRP console
+page_timer=timer
+parental_rating=parental rating
+parking_group=parking place/dustbin
+part-label=part
+part=part
+poster=poster
+provider_config=configuration of epg provider
+RADIO=only radio channels
+RADIOTV=radio and tv
+rating=rating
+read_provider_ids=refresh provider ids
+recStartDate-label=date
+recStartTime-label=start
+rename_group_title=rename channel group
+rename_recording=rename recording
+rename=rename
+reset_mapping=restore mapping
+save_channels_conf=save current configuration
+save_mapping=save mapping
+save_provider_config=save configuration
+save=save
+search_count=hits
+search_criteria=search criteria
+search_results=search results
+search=search
+season-label=season
+season=season
+secprov=secondary provider
+select_alpha=alphabetical
+select_category=select category
+select_channel=channel selection
+select_channelmap=channelmap
+selected_recordings=selected recordings
+selected_timer=selected timers
+select_genre=select genre
+select_language=de=deutsch,en=english
+select_vdr=VDR
+series_overview=series overview
+series_poster=series poster
+shortreview=short review
+show_epgdataids=show EPGDATA ids
+show_tvmids=show TVM ids
+show_tvspids=show TVSP ids
+sort=sort
+source=source
+startDate-label=date
+startTime-label=start
+status=status
+stopTime-label=stop
+svdrp_input=
+svdrp_vdr=select VDR
+switch_channel=switch channel
+testDatabase=test database configuration
+time_from_to-label=time
+time-label=time
+timer_active=active
+timer_back=back
+timer_case=case sensitivity
+timer_category=category
+timer_channel=channel
+timer_date=date
+timer_date_di=Tu.
+timer_date_do=Th.
+timer_date_fr=Fr.
+timer_date_mi=We.
+timer_date_mo=Mo.
+timer_date_sa=Sa.
+timer_date_so=Su.
+timer_directory=directory
+timer_endtime-regexp=\\d{2}:\\d{2}
+timer_endtime-regexp-message=format of time is hh:mm
+timer_episode=episode
+timer_friday=Fr
+timer_genre=genre
+timer_lifetime=lifetime
+timer_monday=Mo
+timer_name=name
+timer_namingmode=filename calculation
+timer_namingmode_select=0=VDR,1=auto,2=Constable,3=series,4=categorised,5=user defined
+timer_priority=priority
+timer_repeat_desc=description
+timer_repeat_shorttext=short text
+timer_repeat_title=title
+timer_saturday=Sa
+timer_save=save
+timer_searchitem2=search term 2
+timer_searchitem=search term
+timer_search_longtext2=description
+timer_search_longtext=description
+timer_searchmode=search mode
+timer_searchmode_select=1=exact match,2=regular expr.,3=like,4=contained in
+timer_search_shorttext2=short text
+timer_search_shorttext=short text
+timer_search_title2=title
+timer_search_title=title
+timer_seasonpart=part
+timer_season=season
+timer_start=time
+timer_starttime-regexp=\\d{2}:\\d{2}
+timer_starttime-regexp-message=format of time is hh:mm
+timer_starttime=start of show between
+timer_sunday=Su
+timer_thursday=Th
+timer_time_from=from
+timer_time_to=to
+timer_tuesday=Tu
+timer_type=do what...
+timer_type_record=record
+timer_type_search=search
+timer_type_select=R=record,V=view,S=search
+timer_type_switch=switch channel
+timer_type_unknown=<unknown>
+timer_vdr=VDR
+timer_vps=VPS
+timer_wednesday=We
+timer_weekdays=weekdays
+timer_year=year
+time=time
+tipp=rating
+title-label=title
+title=title
+TV=only tv channels
+type-label=type
+update_database=change sort in database
+update_selected_channels=save selected channels
+vdr_alias=alias
+vdr_displayname=displayname
+vdr_hostname=hostname
+vdr_ip=IP
+vdrName-label=VDR for recording
+vdr_restfulapi=Restfulapi port
+vdr_svdrpport=SVDRP port
+vdr_uuid=UUID
+view_channels=channel list VDR
+view_name=Name
+view_recordings=recordings VDR
+view_timers=timer VDR
+view_tv=tv VDR
+yes=yes
