--- a/build.gradle
+++ b/build.gradle
@@ -79,7 +79,8 @@ dependencies {
 	// compile  'org.apache.shiro:shiro-web:1.3+'
     // compile  'org.tynamo:tapestry-security:0.6+'
     
-    compile    'org.tynamo:tapestry-conversations:0.2.0'
+    // compile    'org.tynamo:tapestry-conversations:0.2.0'
+    // compile files('external-jar/tapestry-conversations-0.2.1-SNAPSHOT.jar')
 
 	compile  'de.eddyson:tapestry-webjars:1.0.0'	
 	compile  'de.eddyson:tapestry-extensions:0.0.22'
