--- a/build.gradle
+++ b/build.gradle
@@ -68,20 +68,16 @@ dependencies {
     compile  'org.apache.tapestry:tapestry-core:5.4.1'
 	compile  'org.apache.tapestry:tapestry-ioc:5.4.1'
 	compile  'org.apache.tapestry:tapestry-webresources:5.4.1'
-	// compile  'org.got5:tapestry5-jquery:4.1+'
 	
     compile  'org.apache.commons:commons-dbcp2:2.1.1'
    	compile  'org.sql2o:sql2o:1.6.0-RC2'   	
 	compile  'mysql:mysql-connector-java:5.1.40'
 	compile  'org.hsqldb:hsqldb:2.3.4'
 	
-	// compile  'org.apache.shiro:shiro-core:1.3+'
-	// compile  'org.apache.shiro:shiro-web:1.3+'
-    // compile  'org.tynamo:tapestry-security:0.6+'
+	compile  'org.apache.shiro:shiro-core:1.3+'
+	compile  'org.apache.shiro:shiro-web:1.3+'
+    compile  'org.tynamo:tapestry-security:0.6+'
     
-    // compile    'org.tynamo:tapestry-conversations:0.2.0'
-    // compile files('external-jar/tapestry-conversations-0.2.1-SNAPSHOT.jar')
-
 	compile  'de.eddyson:tapestry-webjars:1.0.0'	
 	compile  'de.eddyson:tapestry-extensions:0.0.22'
 	compile  'org.webjars:jquery:3.1.1'
