- jonglisto can now operate without EPGD - various bugfixes and enhancements

--- a/samples/jonglisto.json.sample
+++ b/samples/jonglisto.json.sample
@@ -7,6 +7,7 @@
   "remoteOsdIncSleepTime": "200",
 
   "useEpgd" : "true",
+  "epgVdr" : "stream1",
 
   "epg2vdr": {
     "url": "jdbc:mysql://server:3307/epg2vdr",
@@ -88,8 +89,7 @@
       "head" : "pivdr1",
       "channels": [ "pivdr1", "stream1", "stream2", "pivdr2" ],
       "timers" : "stream1",
-      "recordings" : [ "stream1", "pivdr1" ],
-      "epg" : "stream1"
+      "recordings" : [ "stream1", "pivdr1" ]
     },
 
     {
@@ -97,8 +97,7 @@
       "head" : "pivdr2",
       "channels": [ "pivdr2", "stream2", "stream1", "pivdr1" ],
       "timers" : "stream2",
-      "recordings" : [ "stream2", "pivdr2" ],
-      "epg" : "stream1"
+      "recordings" : [ "stream2", "pivdr2" ]
     }
   ], 
   
