--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -191,6 +191,7 @@ timer_endtime-regexp=\\d{2}:\\d{2}
 timer_endtime-regexp-message=format of time is hh:mm
 timer_episode=episode
 timer_friday=Fr
+timer_filename=filename
 timer_genre=genre
 timer_lifetime=lifetime
 timer_monday=Mo
@@ -243,6 +244,7 @@ TV=only tv channels
 type-label=type
 update_database=change sort in database
 update_selected_channels=save selected channels
+useepgd=use epgd daemon database
 vdr_alias=alias
 vdr_displayname=displayname
 vdr_hostname=hostname
