-login page and very first application security implemented (much more to do)

--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -259,3 +259,8 @@ view_recordings=recordings VDR
 view_timers=timer VDR
 view_tv=tv VDR
 yes=yes
+username=User
+password=Password
+login=Login
+login-required=Login required
+logout=logout
