save intermediate result - unfinished

--- a/src/main/webapp/WEB-INF/app.properties
+++ b/src/main/webapp/WEB-INF/app.properties
@@ -119,6 +119,7 @@ page_search_timer=search timer
 page_setup=Setup
 page_svdrp_console=SVDRP console
 page_timer=timer
+page_useradmin=User administration
 parental_rating=parental rating
 parking_group=parking place/dustbin
 part-label=part
@@ -264,3 +265,18 @@ password=Password
 login=Login
 login-required=Login required
 logout=logout
+perm_page_developer=Developer
+perm_page_channelconfig=channel configuration
+perm_page_programtime=program (now)
+perm_page_searchtimer=search timer
+perm_page_setup=Setup
+perm_page_programchannel=program (channel)
+perm_page_programday=program (day)
+perm_page_useradmin=User administration
+perm_page_channelmap=channelmap
+perm_page_timer=timer
+perm_page_svdrpconsole=SVDRP console
+perm_page_index=home page
+perm_page_recordings=recordings
+perm_view_vdr=View/VDR
+perm_channel_group=Channel group
